# deploy-flake

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  deny.toml  flake.nix
.circleci/: config.yml
.github/: dependabot.yml
.github/workflow/: ci_push.yml
.github/workflows/: ci.yml  ci_nix.yml  ci_push.yml  ci_rust.yml  combine-prs.yml  dependabot_regenerate_sri.yml  nix_update.yml  tests.yml
src/: commands.rs  instrumentation.rs  lib.rs  logging.rs  main.rs  nix.rs  os.rs
src/commands/: deploy.rs  status.rs
src/os/: nixos.rs
