[package]
authors = ["Andreas Fuchs <asf@boinkor.net>"]
description = "Deploy a nix flake to a remote system"
documentation = "https://docs.rs/deploy-flake"
edition = "2024"
license = "MIT"
name = "deploy-flake"
readme = "README.md"
repository = "https://github.com/antifuchs/deploy-flake"
version = "0.0.1-dev"
[badges]
[badges.maintenance]
status = "passively-maintained"

[badges.travis-ci]
branch = "master"
repository = "antifuchs/deploy-flake"

[[bin]]
name = "deploy-flake"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
futures = "*"
openssh = "0.11.2"
serde_json = "1.0.140"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "*"
tracing-indicatif = "0.3.6"

[dependencies.clap]
features = ["derive"]
version = "4.5.38"

[dependencies.serde]
features = ["derive"]
version = "1.0.219"

[dependencies.tokio]
features = ["full"]
version = "1.45.1"

[dev-dependencies]
test-case = "3.3.1"
