[package]
authors = ["Andreas Fuchs <asf@boinkor.net>"]
description = "Deploy a nix flake to a remote system"
documentation = "https://docs.rs/deploy-flake"
edition = "2024"
license = "MIT"
name = "deploy-flake"
readme = "README.md"
repository = "https://github.com/antifuchs/deploy-flake"
version = "0.0.1-dev"
[badges]
[badges.maintenance]
status = "passively-maintained"

[badges.travis-ci]
branch = "master"
repository = "antifuchs/deploy-flake"

[[bin]]
name = "deploy-flake"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.101"
futures = "*"
openssh = "0.11.6"
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "*"
tracing-indicatif = "0.3.14"
backon = { version = "1.6.0", features = ["tokio"] }
clap-duration = "0.1.11"
duration-human = "0.1.10"

[dependencies.clap]
features = ["derive"]
version = "4.5.58"

[dependencies.serde]
features = ["derive"]
version = "1.0.219"

[dependencies.tokio]
features = ["full"]
version = "1.49.0"

[dev-dependencies]
test-case = "3.3.1"
